--- a/imagens/estilo/style.css
+++ b/imagens/estilo/style.css
@@ -25,12 +25,41 @@ header > h1{
 header > p{
     padding-bottom: 50px;
 }
-a{
+
+header a, footer a{
     color: white;
     text-decoration: none;
     font-weight: bolder;
 }
 
-a:hover{
+header a:hover, footer a:hover{
     text-decoration: underline;
+}
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+section.normal{
+    background-color: white;
+    color: black;
+
+}
+
+section.imagem{
+    background-color: rgb(51, 51, 51);
+    color: white;
+}
+section.imagem > p{
+    background-color: rgba(0, 0, 0, 0.266);
+    width: 400px;
+}
+footer{
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding: 10px;
 }
